# awtk-harmonyos-next

./: README.md  create_project.py
docs/: 0.preface.md  1.opengles.md  2.nanovg.md  3.awtk_app.md  4.platform.md  5.native_window.md  6.touch_event.md  7.main_loop.md  8.input_method.md  9.release.md
harmonyos-project/: .gitignore  README.md
harmonyos-project/AppScope/: app.json5
harmonyos-project/AppScope/resources/base/element/: string.json
harmonyos-project/entry/: oh-package-lock.json5  oh-package.json5
harmonyos-project/entry/src/main/: module.json5
harmonyos-project/entry/src/main/cpp/: CMakeLists.txt  app_napi.cpp  awtk_app.cpp  module.cpp
harmonyos-project/entry/src/main/cpp/awtk-port/: input_method_harmony.cpp  input_method_harmony.h  lcd_harmony.inc  native_window_harmony.cpp  native_window_harmony.hpp
harmonyos-project/entry/src/main/cpp/include/: app_napi.h  awtk_app.h
harmonyos-project/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
harmonyos-project/entry/src/main/ets/pages/: Index.ets
harmonyos-project/entry/src/main/resources/base/element/: string.json
harmonyos-project/entry/src/main/resources/zh_CN/element/: string.json
